# asol

./: .gitignore  README.md  pyproject.toml
asol/: __main__.py  grapher.py  logger.py  main.py  odloz.py  params.py  parse.py  runner.py
scripts/: tests_run.sh  trun.sh
tests/: __init__.py  test_params.py  test_parse.py  test_runner.py
