[tool.poetry]
name = "asol"
version = "0.0.5"
description = ""
authors = ["Jan Kacaba <jan.kacaba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# requests = "^2.29.0"
requests = "^2.31.0"
matplotlib = "^3.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
