[project]
name = "asol"
dynamic = ["version", "readme"]
authors = [
    {name = "Jan Kačaba", email = "jan.kacaba@gmail.com"},
]
description = "Solution for <https://github.com/czech-radio/assignment>"
requires-python = ">=3.11"
keywords = ["problem", "solution"]
license = {text = "BSD-3-Clause"}
dependencies = [
    "matplotlib",
]

[tool.setuptools.dynamic]
version = {attr = "asol.__version__"}
readme = {file = ["README.rst", "USAGE.rst"]}

[tool.setuptools.packages.find]
where = ["."] 
namespaces = false  


[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[project.scripts]
asol = "asol.__main__:main"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)1s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
